// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressPie renders a progress pie at different progress states 1`] = `
<div>
  <div
    class="relative flex items-center justify-center"
  >
    <svg
      class="absolute inset-0 -rotate-90"
      id="svg"
      viewBox="-1 -1 34 34"
    >
      <circle
        class="stroke-gray-100"
        cx="16"
        cy="16"
        fill="none"
        r="15.9155"
        stroke-width="2"
      />
      <circle
        class="transition-all duration-700 ease-in-out  stroke-gray-400"
        cx="16"
        cy="16"
        fill="none"
        r="15.9155"
        stroke-dasharray="100 100"
        stroke-dashoffset="100"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="z-10 font-mono text-xs font-normal text-gray-400"
    >
      0
      %
    </div>
  </div>
</div>
`;

exports[`ProgressPie renders a progress pie at different progress states 2`] = `
<div>
  <div
    class="relative flex items-center justify-center"
  >
    <svg
      class="absolute inset-0 -rotate-90"
      id="svg"
      viewBox="-1 -1 34 34"
    >
      <circle
        class="stroke-gray-100"
        cx="16"
        cy="16"
        fill="none"
        r="15.9155"
        stroke-width="2"
      />
      <circle
        class="transition-all duration-700 ease-in-out  stroke-gray-400"
        cx="16"
        cy="16"
        fill="none"
        r="15.9155"
        stroke-dasharray="100 100"
        stroke-dashoffset="50"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="z-10 font-mono text-xs font-normal text-gray-400"
    >
      50
      %
    </div>
  </div>
</div>
`;

exports[`ProgressPie renders a progress pie at different progress states 3`] = `
<div>
  <div
    class="relative flex items-center justify-center"
  >
    <svg
      class="absolute inset-0 -rotate-90"
      id="svg"
      viewBox="-1 -1 34 34"
    >
      <circle
        class="stroke-gray-100"
        cx="16"
        cy="16"
        fill="none"
        r="15.9155"
        stroke-width="2"
      />
      <circle
        class="transition-all duration-700 ease-in-out  stroke-gray-400"
        cx="16"
        cy="16"
        fill="none"
        r="15.9155"
        stroke-dasharray="100 100"
        stroke-dashoffset="0"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
    <div
      class="z-10 font-mono text-xs font-normal text-gray-400"
    >
      100
      %
    </div>
  </div>
</div>
`;
